 * osparser: doXMLPatcg2Main: check acces rights and for successful savetofile
 * osparser: handleFileExists32: fileexists for win also via shlwapi.PathFileExistsW
 * new unit oswinacl with function AddAccessRightsToACL
 * osfunc: FileGetWriteAccess calls at windows also AddAccessRightsToACL
 * osencoding: saveTextFileWithEncoding: ForceDirectories for output

-- d.oertel <d.oertel@uib.de> Thu, 12 Aug 2021 15:00

opsi-script (4.12.4.26) stable; urgency=low

 * Parameter 'pcprofil' not supported any more
 * osencoding: new function  isPlainAsciiString(const searchText: string): boolean;
 * osencoding: func searchEncoding now detectd also isPlainAscii
 * osparser: supress any encoding Warnings if isPlainAscii
 * osencoding: getFileBom: added fmShareDenyNone to open mode
 * osencoding: getFileBom: 3 retries
 * osparser: tsImportLib: do not reload the file at 'Imported all functions from file'
 * osparser: tsecExpected: (external sub sections): try-exept getFileBom +  LoadValidLinesFromFile

-- d.oertel <d.oertel@uib.de> Tue, 27 Jul 2021 15:00

opsi-script (4.12.4.25) stable; urgency=low

 * switch to Lazarus 2.2 / FPC 3.2.2
 * osparser: include_append:  comment out 'encoding=' lines from include_append because
              this line can become a part of a secondary section

-- d.oertel <d.oertel@uib.de> Tue, 20 Jul 2021 15:00


opsi-script (4.12.4.24) stable; urgency=low

 * new: xml2 sections: /encoding Parameter
 * new: xml2 sections: /AllNTUserProfiles Parameter
 * osfunc: file functions use findfirstUTF8 instead of findfirst
 * xml2 sections: many log warnings lowerd ti LLInfo
 * xml2 sections: new command: rootNodeOnCreate = <node>
 * xml2 sections: not existing files will be created
    using the value of rootNodeOnCreate, fallback to 'rootnode' if not existing
 * osparser: include (append / insert) statements fixes on read file with encoding
 * osparser: importlib statements fixes on read file with encoding