@@ -12,6 +12,7 @@ opsi-script (4.12.4.27) stable; urgency=low
  * new unit oswinacl with function AddAccessRightsToACL
  * osfunc: FileGetWriteAccess calls at windows also AddAccessRightsToACL
  * osencoding: saveTextFileWithEncoding: ForceDirectories for output
+ * osfunc: toCopyOrNotToCopy: fix for copy -r
 
 -- d.oertel <d.oertel@uib.de> Thu, 12 Aug 2021 15:00
 
